# brave-core

./: package.json
app/: generated_resources.grd  os_settings_strings.grdp
browser/: about_flags.cc  brave_content_browser_client.cc  sources.gni
browser/permissions/: permission_manager_browsertest.cc
browser/ui/: BUILD.gn
components/: omnibox_strings.grdp  page_info_strings.grdp
ios/browser/ui/webui/ads/: BUILD.gn  ads_internals_ui.h  ads_internals_ui.mm
patches/: chrome-android-BUILD.gn.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-resources-extensions-BUILD.gn.patch  chrome-browser-resources-extensions-item_list.html.ts.patch  chrome-browser-resources-extensions-sidebar.html.ts.patch  chrome-browser-safe_browsing-BUILD.gn.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-browser.cc.patch  chrome-test-BUILD.gn.patch  components-omnibox-browser-omnibox_edit_model.cc.patch  content-browser-renderer_host-navigation_request.cc.patch  content-browser-web_contents-web_contents_impl.cc.patch  ios-chrome-browser-flags-about_flags.mm.patch  net-BUILD.gn.patch  third_party-blink-public-mojom-BUILD.gn.patch  third_party-blink-renderer-bindings-generated_in_modules.gni.patch  third_party-blink-renderer-bindings-idl_in_modules.gni.patch  third_party-blink-renderer-platform-runtime_enabled_features.json5.patch  third_party-polymer-v3_0-BUILD.gn.patch  tools-gritsettings-resource_ids.spec.patch  tools-metrics-histograms-metadata-page-histograms.xml.patch  ui-webui-resources-tools-build_webui.gni.patch
test/: BUILD.gn
(+65 files in other folders)
