# Copyright (c) 2024 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/build/config.gni")
import("//build/config/features.gni")
import("//mojo/public/tools/bindings/mojom.gni")

source_set("ads") {
  sources = [
    "ads_internals_ui.h",
    "ads_internals_ui.mm",
  ]

  deps = [
    "//brave/components/ads/browser",
    "//brave/components/ads/browser/resources:generated_resources",
    "//brave/components/ads/common",
    "//brave/components/ads/common:mojom",
    "//brave/components/constants",
    "//brave/components/l10n/common",
    "//brave/components/resources:static_resources",
    "//brave/ios/browser/ads",
    "//components/prefs",
    "//components/resources",
    "//ios/chrome/browser/shared/model/application_context",
    "//ios/chrome/browser/shared/model/browser_state",
    "//ios/chrome/browser/shared/model/profile",
    "//ios/chrome/browser/shared/ui/util:util",
    "//ios/web",
    "//ios/web:resources",
    "//ios/web/public",
    "//ios/web/public/js_messaging",
    "//ios/web/public/webui",
    "//ios/web/webui",
    "//mojo/public/cpp/bindings",
    "//mojo/public/js:resources",
    "//ui/base",
    "//ui/base/clipboard",
  ]
}
